--- a/app.css
+++ b/app.css
@@ -10,6 +10,15 @@ body {
   width: 100%;
   z-index: 2;
 }
+#fullscreen {
+  float: left;
+  color: white;
+  background: rgba(1, 1, 1, 0.2);
+  padding: 0.5em 1em;
+  min-width: 1em;
+  border-radius: 0.2em;
+  margin: 1em 0.5em;
+}
 #home {
   float: left;
   color: white;
@@ -17,9 +26,9 @@ body {
   padding: 0.5em 1em;
   min-width: 1em;
   border-radius: 0.2em;
-  margin: 1em;
+  margin: 1em 0.5em;
 }
-#open {
+#current {
   float: left;
   color: white;
   background: rgba(1, 1, 1, 0.2);
