--- a/app.css
+++ b/app.css
@@ -48,6 +48,16 @@ body {
   border-radius: 0.2em;
   margin: 1em 0em;
 }
+#logs {
+  float: left;
+  color: white;
+  background: rgba(1, 1, 1, 0.2);
+  padding: 0.5em;
+  min-width: 1em;
+  border-radius: 0.2em;
+  margin: 1em 0.5em;
+  text-align: center;
+}
 #current-folder {
   float: left;
   color: white;
