--- a/app.css
+++ b/app.css
@@ -19,17 +19,7 @@ body {
   border-radius: 0.2em;
   margin: 1em 0.5em;
 }
-#home {
-  float: left;
-  color: white;
-  background: rgba(1, 1, 1, 0.2);
-  padding: 0.5em;
-  min-width: 1em;
-  border-radius: 0.2em;
-  margin: 1em 0em;
-  text-align: center;
-}
-#open {
+#file {
   float: left;
   color: white;
   background: rgba(1, 1, 1, 0.2);
@@ -56,6 +46,16 @@ body {
   min-width: 1em;
   border-radius: 0.2em;
   margin: 1em 0.5em;
+  text-align: center;
+}
+#sample {
+  float: left;
+  color: white;
+  background: rgba(1, 1, 1, 0.2);
+  padding: 0.5em;
+  min-width: 1em;
+  border-radius: 0.2em;
+  margin: 1em 0em;
   text-align: center;
 }
 #current-folder {
